--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout repository NOCOR
       uses: actions/checkout@v2
     - name: Use Node.js
       uses: actions/setup-node@v1
