--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "underscore": "^1.12.1"
   },
   "scripts": {
-    "test": "nyc --reporter=html mocha --exit",
+    "test": "cross-env NODE_ENV=test PORT=3000 nyc --reporter=html mocha --exit",
     "start": "node app.js"
   },
   "devDependencies": {
@@ -16,6 +16,7 @@
     "@types/underscore": "^1.10.24",
     "mocha": "^8.2.1",
     "nyc": "^15.1.0",
-    "supertest": "^6.1.3"
+    "supertest": "^6.1.3",
+    "cross-env": "^7.0.3"
   }
 }
