--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "cross-env NODE_ENV=test PORT=3000 nyc --reporter=html mocha --exit",
-    "start": "node app.js"
+    "start": "cross-env PORT=3001 node app.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
